--- a/app/src/main/res/layout/main_activity_content.xml
+++ b/app/src/main/res/layout/main_activity_content.xml
@@ -13,19 +13,22 @@
         android:layout_above="@id/tabs_fragment">
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/nav_host_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:name="androidx.navigation.fragment.NavHostFragment"
-                app:defaultNavHost="true"
-                app:navGraph="@navigation/main_nav_graph"
-                tools:layout="@layout/dialer_fragment" />
-
         </RelativeLayout>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:layout_anchor="@+id/relativeLayout"
+            app:layout_anchorGravity="center"
+            app:navGraph="@navigation/main_nav_graph"
+            tools:layout="@layout/dialer_fragment" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
