--- a/app/src/main/res/xml/motion_main_activity_tabs_selector.xml
+++ b/app/src/main/res/xml/motion_main_activity_tabs_selector.xml
@@ -3,48 +3,21 @@
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetStart="@+id/dialer"
-        motion:constraintSetEnd="@+id/chat_rooms"/>
-
-    <Transition
-        motion:constraintSetStart="@+id/call_history"
-        motion:constraintSetEnd="@+id/contacts"/>
+        motion:constraintSetStart="@id/selector"
+        motion:constraintSetEnd="@+id/call_history"/>
 
     <Transition
         motion:constraintSetStart="@+id/call_history"
         motion:constraintSetEnd="@+id/dialer"/>
-
-    <Transition
-        motion:constraintSetStart="@+id/call_history"
-        motion:constraintSetEnd="@+id/chat_rooms"/>
-
-    <Transition
-        motion:constraintSetStart="@+id/contacts"
-        motion:constraintSetEnd="@+id/dialer"/>
-
-    <Transition
-        motion:constraintSetStart="@+id/contacts"
-        motion:constraintSetEnd="@+id/chat_rooms"/>
 
     <ConstraintSet android:id="@+id/call_history">
 
         <Constraint
             android:id="@id/selector"
-            android:layout_height="@dimen/tabs_fragment_selector_size"
+            android:layout_height="5dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintLeft_toLeftOf="parent"
             motion:layout_constraintRight_toLeftOf="@id/guidelineLeft" />
-
-    </ConstraintSet>
-
-    <ConstraintSet android:id="@+id/contacts">
-
-        <Constraint
-            android:id="@id/selector"
-            android:layout_height="@dimen/tabs_fragment_selector_size"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-            motion:layout_constraintRight_toLeftOf="@id/guidelineMiddle" />
 
     </ConstraintSet>
 
@@ -52,20 +25,9 @@
 
         <Constraint
             android:id="@id/selector"
-            android:layout_height="@dimen/tabs_fragment_selector_size"
+            android:layout_height="5dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintLeft_toLeftOf="@id/guidelineMiddle"
-            motion:layout_constraintRight_toLeftOf="@id/guidelineRight" />
-
-    </ConstraintSet>
-
-    <ConstraintSet android:id="@+id/chat_rooms">
-
-        <Constraint
-            android:id="@id/selector"
-            android:layout_height="@dimen/tabs_fragment_selector_size"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintLeft_toLeftOf="@id/guidelineRight"
+            motion:layout_constraintLeft_toRightOf="@id/guidelineLeft"
             motion:layout_constraintRight_toRightOf="parent" />
 
     </ConstraintSet>
