--- a/app/src/main/res/layout-sw533dp-land/dialer_fragment.xml
+++ b/app/src/main/res/layout-sw533dp-land/dialer_fragment.xml
@@ -30,8 +30,7 @@
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/ui_layout"
             android:padding="30dp"
-            android:contentDescription="@null"
-            android:src="@drawable/dialer_background" />
+            android:contentDescription="@null"/>
 
         <org.linphone.mediastream.video.capture.CaptureTextureView
             android:id="@+id/video_preview_window"
